# strong-types

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yaml
include/: strong_type.hpp
test/: dimension_tests.cpp  strong_types_tests.cpp
